--- a/extensions/users-permissions/models/User.settings.json
+++ b/extensions/users-permissions/models/User.settings.json
@@ -59,8 +59,9 @@
       "plugin": "users-permissions",
       "configurable": false
     },
-    "licences": {
-      "collection": "licence"
+    "apps": {
+      "via": "user",
+      "collection": "app"
     }
   }
 }
