[add] logic to search an app by user-friendly url

--- a/api/app/documentation/1.0.0/app.json
+++ b/api/app/documentation/1.0.0/app.json
@@ -510,6 +510,74 @@
           }
         ]
       }
+    },
+    "/app/{url}": {
+      "get": {
+        "deprecated": false,
+        "description": "",
+        "responses": {
+          "200": {
+            "description": "Retrieve app document(s)",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "properties": {
+                    "foo": {
+                      "type": "string"
+                    }
+                  }
+                }
+              }
+            }
+          },
+          "403": {
+            "description": "Forbidden",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "$ref": "#/components/schemas/Error"
+                }
+              }
+            }
+          },
+          "404": {
+            "description": "Not found",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "$ref": "#/components/schemas/Error"
+                }
+              }
+            }
+          },
+          "default": {
+            "description": "unexpected error",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "$ref": "#/components/schemas/Error"
+                }
+              }
+            }
+          }
+        },
+        "summary": "",
+        "tags": [
+          "App"
+        ],
+        "parameters": [
+          {
+            "name": "url",
+            "in": "path",
+            "description": "",
+            "deprecated": false,
+            "required": true,
+            "schema": {
+              "type": "string"
+            }
+          }
+        ]
+      }
     }
   },
   "components": {
@@ -623,6 +691,12 @@
                 }
               }
             }
+          },
+          "app_version": {
+            "type": "string"
+          },
+          "url": {
+            "type": "uid"
           }
         }
       },
@@ -646,6 +720,12 @@
             "items": {
               "type": "string"
             }
+          },
+          "app_version": {
+            "type": "string"
+          },
+          "url": {
+            "type": "uid"
           },
           "created_by": {
             "type": "string"
