--- a/extensions/users-permissions/models/User.settings.json
+++ b/extensions/users-permissions/models/User.settings.json
@@ -60,7 +60,7 @@
       "configurable": false
     },
     "apps": {
-      "via": "user",
+      "via": "owner",
       "collection": "app"
     }
   }
