--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
     "knex": "0.21.18",
     "pg": "^8.6.0",
     "pg-connection-string": "^2.5.0",
+    "replace-string": "^3.1.0",
+    "slugify": "^1.5.3",
     "sqlite3": "5.0.0",
     "strapi": "3.6.2",
     "strapi-admin": "3.6.2",
