--- a/api/license/models/license.settings.json
+++ b/api/license/models/license.settings.json
@@ -2,7 +2,8 @@
   "kind": "collectionType",
   "collectionName": "licenses",
   "info": {
-    "name": "License"
+    "name": "License",
+    "description": ""
   },
   "options": {
     "increments": true,
