--- a/api/app/documentation/1.0.0/app.json
+++ b/api/app/documentation/1.0.0/app.json
@@ -254,64 +254,7 @@
         }
       }
     },
-    "/apps/count": {
-      "get": {
-        "deprecated": false,
-        "description": "",
-        "responses": {
-          "200": {
-            "description": "response",
-            "content": {
-              "application/json": {
-                "schema": {
-                  "properties": {
-                    "count": {
-                      "type": "integer"
-                    }
-                  }
-                }
-              }
-            }
-          },
-          "403": {
-            "description": "Forbidden",
-            "content": {
-              "application/json": {
-                "schema": {
-                  "$ref": "#/components/schemas/Error"
-                }
-              }
-            }
-          },
-          "404": {
-            "description": "Not found",
-            "content": {
-              "application/json": {
-                "schema": {
-                  "$ref": "#/components/schemas/Error"
-                }
-              }
-            }
-          },
-          "default": {
-            "description": "unexpected error",
-            "content": {
-              "application/json": {
-                "schema": {
-                  "$ref": "#/components/schemas/Error"
-                }
-              }
-            }
-          }
-        },
-        "summary": "",
-        "tags": [
-          "App"
-        ],
-        "parameters": []
-      }
-    },
-    "/apps/{id}": {
+    "/apps/{url}": {
       "get": {
         "deprecated": false,
         "description": "",
@@ -363,7 +306,7 @@
         ],
         "parameters": [
           {
-            "name": "id",
+            "name": "url",
             "in": "path",
             "description": "",
             "deprecated": false,
@@ -373,7 +316,9 @@
             }
           }
         ]
-      },
+      }
+    },
+    "/apps/{id}": {
       "put": {
         "deprecated": false,
         "description": "Update a record",
