[update] updated docs

--- a/api/app/documentation/1.0.0/app.json
+++ b/api/app/documentation/1.0.0/app.json
@@ -316,9 +316,7 @@
             }
           }
         ]
-      }
-    },
-    "/apps/{id}": {
+      },
       "put": {
         "deprecated": false,
         "description": "Update a record",
@@ -381,7 +379,7 @@
         },
         "parameters": [
           {
-            "name": "id",
+            "name": "url",
             "in": "path",
             "description": "",
             "deprecated": false,
@@ -444,7 +442,7 @@
         ],
         "parameters": [
           {
-            "name": "id",
+            "name": "url",
             "in": "path",
             "description": "",
             "deprecated": false,
